# integradsl

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: pedidos.json  usuarios.json
examples/: api_get_post_real.integra  api_real_opcional.integra  erro_semantico.integra  erro_sintatico.integra  sincronizar_pedidos.integra  validar_usuarios.integra
src/integradsl/: __init__.py  ast_nodes.py  cli.py  grammar.lark  interpreter.py  parser.py  pretty_tree.py  semantic.py  translator.py
tests/: test_parser.py
