[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "integradsl"
version = "0.1.0"
description = "DSL com Lark para automação de integrações operacionais"
requires-python = ">=3.10"
dependencies = [
    "lark==1.3.1",
    "requests>=2.31.0"
]

[project.scripts]
integradsl = "integradsl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
integradsl = ["grammar.lark"]
